Constructor is deprecated, update source code