@@ -76,9 +76,9 @@ protected CObject()
         String key = "CObject";
         Integer num = (Integer) TclObject.objRecordMap.get(key);
         if (num == null) {
-            num = new Integer(1);
+            num = Integer.valueOf(1);
         } else {
-            num = new Integer(num.intValue() + 1);
+            num = Integer.valueOf(num.intValue() + 1);
         }
 	TclObject.objRecordMap.put(key, num);
     }
@@ -117,9 +117,9 @@ protected CObject(
         String key = "CObject";
         Integer num = (Integer) TclObject.objRecordMap.get(key);
         if (num == null) {
-            num = new Integer(1);
+            num = Integer.valueOf(1);
         } else {
-            num = new Integer(num.intValue() + 1);
+            num = Integer.valueOf(num.intValue() + 1);
         }
 	TclObject.objRecordMap.put(key, num);
     }
@@ -194,9 +194,9 @@ duplicate()
         String key = "CObject.duplicate()";
         Integer num = (Integer) TclObject.objRecordMap.get(key);
         if (num == null) {
-            num = new Integer(1);
+            num = Integer.valueOf(1);
         } else {
-            num = new Integer(num.intValue() + 1);
+            num = Integer.valueOf(num.intValue() + 1);
         }
 	TclObject.objRecordMap.put(key, num);
     }
