@@ -48,9 +48,9 @@ TclList()
         String key = "TclList";
         Integer num = (Integer) TclObject.objRecordMap.get(key);
         if (num == null) {
-            num = new Integer(1);
+            num = Integer.valueOf(1);
         } else {
-            num = new Integer(num.intValue() + 1);
+            num = Integer.valueOf(num.intValue() + 1);
         }
         TclObject.objRecordMap.put(key, num);
     }
@@ -82,9 +82,9 @@ TclList(
         String key = "TclList";
         Integer num = (Integer) TclObject.objRecordMap.get(key);
         if (num == null) {
-            num = new Integer(1);
+            num = Integer.valueOf(1);
         } else {
-            num = new Integer(num.intValue() + 1);
+            num = Integer.valueOf(num.intValue() + 1);
         }
         TclObject.objRecordMap.put(key, num);
     }
@@ -191,9 +191,9 @@ throws
 	    String key = "TclString -> TclList";
 	    Integer num = (Integer) TclObject.objRecordMap.get(key);
 	    if (num == null) {
-	        num = new Integer(1);
+	        num = Integer.valueOf(1);
 	    } else {
-	        num = new Integer(num.intValue() + 1);
+	        num = Integer.valueOf(num.intValue() + 1);
 	    }
 	    TclObject.objRecordMap.put(key, num);
 	}
