@@ -108,9 +108,9 @@ public class TclInteger implements InternalRep {
 	    String key = "TclString -> TclInteger";
 	    Integer num = (Integer) TclObject.objRecordMap.get(key);
 	    if (num == null) {
-	        num = new Integer(1);
+	        num = Integer.valueOf(1);
 	    } else {
-	        num = new Integer(num.intValue() + 1);
+	        num = Integer.valueOf(num.intValue() + 1);
 	    }
 	    TclObject.objRecordMap.put(key, num);
 	}
