@@ -137,9 +137,9 @@ abstract class TclObjectBase {
 	    String key = "TclObject";
 	    Integer num = (Integer) TclObject.objRecordMap.get(key);
 	    if (num == null) {
-	        num = new Integer(1);
+	        num = Integer.valueOf(1);
 	    } else {
-	        num = new Integer(num.intValue() + 1);
+	        num = Integer.valueOf(num.intValue() + 1);
 	    }
 	    TclObject.objRecordMap.put(key, num);
 	}
@@ -186,9 +186,9 @@ abstract class TclObjectBase {
 	    String key = "TclObject";
 	    Integer num = (Integer) TclObject.objRecordMap.get(key);
 	    if (num == null) {
-	        num = new Integer(1);
+	        num = Integer.valueOf(1);
 	    } else {
-	        num = new Integer(num.intValue() + 1);
+	        num = Integer.valueOf(num.intValue() + 1);
 	    }
 	    TclObject.objRecordMap.put(key, num);
 	}
@@ -223,9 +223,9 @@ abstract class TclObjectBase {
 	    String key = "TclObject";
 	    Integer num = (Integer) TclObject.objRecordMap.get(key);
 	    if (num == null) {
-	        num = new Integer(1);
+	        num = Integer.valueOf(1);
 	    } else {
-	        num = new Integer(num.intValue() + 1);
+	        num = Integer.valueOf(num.intValue() + 1);
 	    }
 	    TclObject.objRecordMap.put(key, num);
 	}
