@@ -40,9 +40,9 @@ public class TclString implements InternalRep {
 	    String key = "TclString";
 	    Integer num = (Integer) TclObject.objRecordMap.get(key);
 	    if (num == null) {
-	        num = new Integer(1);
+	        num = Integer.valueOf(1);
 	    } else {
-	        num = new Integer(num.intValue() + 1);
+	        num = Integer.valueOf(num.intValue() + 1);
 	    }
 	    TclObject.objRecordMap.put(key, num);
 	}
@@ -55,9 +55,9 @@ public class TclString implements InternalRep {
 	    String key = "TclString";
 	    Integer num = (Integer) TclObject.objRecordMap.get(key);
 	    if (num == null) {
-	        num = new Integer(1);
+	        num = Integer.valueOf(1);
 	    } else {
-	        num = new Integer(num.intValue() + 1);
+	        num = Integer.valueOf(num.intValue() + 1);
 	    }
 	    TclObject.objRecordMap.put(key, num);
 	}
@@ -73,9 +73,9 @@ public class TclString implements InternalRep {
 	    String key = "TclString.duplicate()";
 	    Integer num = (Integer) TclObject.objRecordMap.get(key);
 	    if (num == null) {
-	        num = new Integer(1);
+	        num = Integer.valueOf(1);
 	    } else {
-	        num = new Integer(num.intValue() + 1);
+	        num = Integer.valueOf(num.intValue() + 1);
 	    }
 	    TclObject.objRecordMap.put(key, num);
 	}
@@ -156,9 +156,9 @@ public class TclString implements InternalRep {
 	    String key = "String -> TclString";
 	    Integer num = (Integer) TclObject.objRecordMap.get(key);
 	    if (num == null) {
-	        num = new Integer(1);
+	        num = Integer.valueOf(1);
 	    } else {
-	        num = new Integer(num.intValue() + 1);
+	        num = Integer.valueOf(num.intValue() + 1);
 	    }
 	    TclObject.objRecordMap.put(key, num);
 	}
